--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,10 @@
 <div id="login" class="login">
     <p>Name:</p>
     <input type="text" id = "name">
+    <input type="button" value="Enter" id = "login-button">
 </div>
 
-<canvas id = "canvas" width = "1000" height = "900"></canvas>
+<canvas id = "canvas"></canvas>
 <script type="text/javascript" src="game.js"></script>
 </body>
 </html>
