--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+		<script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+		<script src="libraries/p5.dom.js"></script>
+		<script language="javascript" type="text/javascript" src="game.js"></script>
+		<style> body {padding: 0; margin: 0;} </style>
 </head>
 <body>
-<div id="login" class="login">
+<!-- <div id="login" class="login">
     <p>Name:</p>
     <input type="text" id = "name">
     <input type="button" value="Enter" id = "login-button">
 </div>
 
 <canvas id = "canvas"></canvas>
-<script type="text/javascript" src="game.js"></script>
+<script type="text/javascript" src="game.js"></script> -->
+
 </body>
 </html>
