--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/addons/p5.dom.js"></script>
-		<script language="javascript" type="text/javascript" src="game.js"></script>
 		<style> body {padding: 0; margin: 0;} </style>
 </head>
 <body>
-
+<script src="cell.js"></script>
 <script language="javascript" type="text/javascript" src="game.js"></script>
 </body>
 </html>
