Started work on client-side rendering

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,9 @@
 		<style> body {padding: 0; margin: 0;} </style>
 </head>
 <body>
+<script src="grid.js"></script>
+<script src="simulation.js"></script>
+<script src="Rules.js"></script>
 <script src="cell.js"></script>
 <script language="javascript" type="text/javascript" src="game.js"></script>
 </body>
