--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,9 @@
 		<style> body {padding: 0; margin: 0;} </style>
 </head>
 <body>
+<div id="login" class="login">
+	
+</div>
 <script src="grid.js"></script>
 <script src="simulation.js"></script>
 <script src="Rules.js"></script>
