Login element is a little prettier

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,8 +7,10 @@
     <style> body {padding: 0; margin: 0;} </style>
 </head>
 <body>
-<div id="login" class="login">
-	
+<div class="login-container" id = "login-container">
+    <div id="login" class="login-controls">
+
+    </div>
 </div>
 
 <script src="game.js"></script>
