Live display of average message size now works. needs prettying up

--- a/client/src/metrics.html
+++ b/client/src/metrics.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Multilife metrics</title>
     <script src="https://d3js.org/d3.v4.js"></script>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
@@ -12,10 +13,16 @@
     <div id="total-bytes-sent">
 
     </div>
+    <hr>
 
-    <div id="average-message-size">
+    <div>
+        <p>Average size of message sent by server (kb)</p>
+        <hr>
+        <div id="average-message-size">
 
+        </div>
     </div>
+    <hr>
 
 </div>
 
