Added basic live pie chart which renders counts by message type

--- a/client/src/metrics.html
+++ b/client/src/metrics.html
@@ -22,6 +22,12 @@
         </div>
     </div>
     <hr>
+    <div>
+        <p>Message type count</p>
+        <div id="message-type-count">
+
+        </div>
+    </div>
 
 </div>
 
