--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <style> body {padding: 0; margin: 0;} </style>
+    <style> body {
+        padding: 0;
+        margin: 0;
+    } </style>
 </head>
 <body>
-<div class="login-container" id = "login-container">
+<div class="login-container" id="login-container">
     <div id="login" class="login-controls">
 
     </div>
