Message type count is now an animated bar chart

--- a/client/src/metrics.html
+++ b/client/src/metrics.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <hr>
-    <div>
+    <div id="message-type-count-container">
         <p>Message type count</p>
         <div id="message-type-count">
 
