/metrics now has a chart of current average outgoing kb/s instead of average size of message

--- a/client/src/metrics.html
+++ b/client/src/metrics.html
@@ -16,8 +16,8 @@
     <hr>
 
     <div>
-        <p>Average size of message sent by server (kb)</p>
-        <div id="average-message-size">
+        <p>Average outgoing kb/s</p>
+        <div id="average-kbs">
 
         </div>
     </div>
