Slight refactors and style changes

--- a/client/src/metrics/metrics.html
+++ b/client/src/metrics/metrics.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Multilife metrics</title>
     <script src="https://d3js.org/d3.v4.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="../main.css">
 </head>
 <body class="metrics-body">
