meta tags change

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="description" content="Multiplayer game of life">
+    <meta name="keywords" content="Game, multiplayer, game of life, life, p5, online">
+    <meta name="author" content="Sozemego, Kamil Jurek">
+    <title>Multilife - multiplayer game of life</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <style> body {
         padding: 0;
