Added two buttons for after a game, back to menu and next game

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -30,6 +30,13 @@
 
 </div>
 
+<div id="gray-overlay" class="gray-overlay gray-overlay-hidden"></div>
+
+<div id="scores-container" class="scores-container scores-hidden">
+    <div id="scores" class="scores"></div>
+    <div id="scores-buttons" class="scores-buttons"></div>
+</div>
+
 <div id="canvas-container"></div>
 
 <script src="index.js"></script>
