p5 is downloaded through a cdn

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Sozemego, Kamil Jurek">
     <title>Multilife - multiplayer game of life</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
     <style> body {
         padding: 0;
         margin: 0;
